<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black"
    tools:context=".main.MainSearchFragment"
    android:paddingTop="32dp"
    android:paddingHorizontal="16dp"
   >

    <TextView
        android:id="@+id/textView"
        style="@style/sembold_22sp_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/search_airTicket_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/frame_search_main"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_search_within_main"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/searhc"
                android:contentDescription="@string/search_airTicket_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_from"
                style="@style/input_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ-"
                android:hint="@string/hint_from"
                android:paddingVertical="8dp"
                android:singleLine="true"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/grey5"

                app:layout_constraintEnd_toEndOf="@id/edit_text_from"
                app:layout_constraintStart_toStartOf="@id/edit_text_from"
                app:layout_constraintTop_toBottomOf="@id/edit_text_from" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_to"
                style="@style/input_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ-"
                android:hint="@string/hint_to"
                android:paddingVertical="8dp"
                android:focusable="false"
                android:singleLine="true"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/line1"
                app:layout_constraintStart_toStartOf="@+id/line1"
                app:layout_constraintTop_toTopOf="@+id/line1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:maxLines="1"
        android:text="@string/fly_away_musically"
        style="@style/sembold_22sp_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_music_fly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:itemCount="3"
        tools:listitem="@layout/music_fly_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>