<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey2"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey2">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_frame"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageView2">


                <EditText
                    android:id="@+id/edit_text_from_bottom_dialog"
                    style="@style/input_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/air_bottomsheel"
                    android:drawablePadding="8dp"
                    android:focusable="false"
                    android:hint="@string/hint_from"
                    android:paddingVertical="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/grey5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_from_bottom_dialog" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_to_bottom_dialog"
                    style="@style/input_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ-"
                    android:drawableStart="@drawable/search2_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_to"
                    android:paddingVertical="8dp"
                    android:paddingEnd="20dp"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <ImageView
                    android:id="@+id/clear_to_text"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="@+id/edit_text_to_bottom_dialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/edit_text_to_bottom_dialog"
                    app:srcCompat="@drawable/close_icon" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/anywhere"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/anywhere">

                <ImageView
                    android:id="@+id/image_route"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/difficult_route" />

                <TextView
                    android:id="@+id/text_route"
                    style="@style/regular_14sp_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/route_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/anywhere"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/weekend"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/route"
                app:layout_constraintTop_toTopOf="@+id/weekend">

                <ImageView
                    android:id="@+id/image_anywhere"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/anywhere" />

                <TextView
                    android:id="@+id/text_anywhere"
                    style="@style/regular_14sp_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:paddingTop="8dp"
                    android:text="@string/anywhere_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weekend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/hot_tickets"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/anywhere"
                app:layout_constraintTop_toTopOf="@+id/hot_tickets">

                <ImageView
                    android:id="@+id/image_weekend"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/weekend" />

                <TextView
                    android:id="@+id/text_weekend"
                    style="@style/regular_14sp_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/weekend_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hot_tickets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/weekend"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <ImageView
                    android:id="@+id/image_hot_tickets"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/hot_tickets" />

                <TextView
                    android:id="@+id/text_tickets"
                    style="@style/regular_14sp_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/hot_tickets_text" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendations_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_frame"
                android:orientation="vertical"
                android:padding="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/route"
                tools:listitem="@layout/recommendations_item" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/rectangle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>